--- a/core/pom.xml
+++ b/core/pom.xml
@@ -106,11 +106,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
-        <dependency>
-            <groupId>com.opencsv</groupId>
-            <artifactId>opencsv</artifactId>
-            <version>4.1</version>
-        </dependency>
+		<dependency>
+		    <groupId>de.siegmar</groupId>
+		    <artifactId>fastcsv</artifactId>
+		    <version>1.0.2</version>
+		</dependency>
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
