--- a/core/pom.xml
+++ b/core/pom.xml
@@ -106,6 +106,11 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
+        <dependency>
+		  <groupId>org.apache.commons</groupId>
+		  <artifactId>commons-text</artifactId>
+		  <version>1.3</version>
+		</dependency>
 		<dependency>
 		    <groupId>de.siegmar</groupId>
 		    <artifactId>fastcsv</artifactId>
